@@ -1,5 +1,5 @@
 /* Definitions for specs for the GNU compiler for the Java(TM) language.
-   Copyright (C) 1996, 1998, 1999, 2000, 2001, 2003, 2004
+   Copyright (C) 1996, 1998, 1999, 2000, 2001, 2003, 2004, 2006
    Free Software Foundation, Inc.
 
 This file is part of GCC.
@@ -35,7 +35,29 @@ The Free Software Foundation is independent of Sun Microsystems, Inc.  */
     %{fjni:%{femit-class-file:%e-fjni and -femit-class-file are incompatible}}\
     %{femit-class-file:%{!fsyntax-only:%e-femit-class-file should used along with -fsyntax-only}}\
     %{femit-class-files:%{!fsyntax-only:%e-femit-class-file should used along with -fsyntax-only}}\
-    %{!E:jc1 %i %(jc1) %(cc1_options) %{+e*} %{I*}\
-             %{MD:-MD_} %{MMD:-MMD_} %{M} %{MM} %{MA} %{MT*} %{MF*}\
-             %{!fsyntax-only:%(invoke_as)}}", 0, 0, 0},
+    %{E:%{e-E is not valid for gcj}}\
+    %{.java|fsaw-java-file:ecj1 %i %{W*} %{w} %{g*}			\
+      %{fbootclasspath*}						\
+      %{fenable-assertions*}						\
+      %{fdisable-assertions*}						\
+      %{fencoding*} %{ffilelist-file}					\
+      %{foutput-class-dir*} %{g*}					\
+      %{fsource*} %{!fsource*:-fsource=1.4}				\
+      %{ftarget*} %{!ftarget*:-ftarget=1.4}				\
+      %{!findirect-dispatch:-fzip-dependency=%U.zip}			\
+      %{!fsyntax-only:-fzip-target=%U.jar}}\n				\
+    %{.class|.zip|.jar|!fsyntax-only:jc1				\
+      %{.java:%U.jar}							\
+      %{.class|.zip|.jar|ffilelist-file|fcompile-resource*:%i}		\
+      %(jc1) %(cc1_options) %{I*} %{!findirect-dispatch:-I%U.zip}	\
+      %(invoke_as)}",
+      0, 0, 0},
 
+  /*
+    FIXME: we don't use %|, even though we could, because we need the
+    dependency zip to be ready early enough.  We could work around
+    this by not having a dependency zip and instead teaching jc1 to
+    read a special manifest file included in the sole zip, this
+    manifest would say which files are to be compiled and which are
+    not.
+   */
